--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "build": "npm run build"
   },
   "keywords": [],
   "author": "",
