--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js",
-    "build": "npm run build"
+    "build": "scripts build"
   },
   "keywords": [],
   "author": "",
