--- a/server/package.json
+++ b/server/package.json
@@ -19,8 +19,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js",
-    "build": "scripts build"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
