--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon index"
   },
   "keywords": [],
   "author": "",
